# figment2

./: .pre-commit-config.yaml  Cargo.toml  README.md
examples/: cli_app.rs
src/: error.rs  figment.rs  jail.rs  lib.rs  metadata.rs  profile.rs  provider.rs  util.rs
src/providers/: data.rs  env.rs  mod.rs  named.rs  serialized.rs
src/value/: de.rs  magic.rs  parse.rs  tag.rs  value.rs
tests/: camel-case.rs  cargo.rs  custom_env_parser.rs  empty-env-vars.rs  enum.rs  lossy_values.rs  tagged.rs  tuple-struct.rs  yaml-enum.rs
